--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,50 +1,28 @@
 <div class="main-header">
   <nav class="navbar navbar-expand-lg">
-    <!-- <a class="navbar-brand" href="#">Layn's Leaf</a> -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon" [ngClass]="{'collapsed': navbarCollapsed}"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarNav" [ngClass]="{'show': !navbarCollapsed}">
+    <div class="group"></div>
+    <div class="group collapse navbar-collapse main-header mx-lg-5" id="navbarNav" [ngClass]="{'show': !navbarCollapsed}">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <!-- <a class="nav-link" href="/travel">Travel <span class="sr-only"></span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="/blog">blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/tech">Tech</a>
-        </li> -->
+          <a class="nav-link" href="/Bio">bio</a>
+        </li>
+        <a href="/home"><img class="layns-leaf-logo" src="assets/photos/laynsleaf.png" alt="image"></a>
         <li class="nav-item">
-          <a class="nav-link" href="/home">Home</a>
+          <a class="nav-link" href="/Gallery">gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/blog">Blog</a>
+          <a class="nav-link" href="/shop">shop</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/flashcards">Flashcards</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="/aviation">Aviation</a>
-        </li> -->
-        <!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/aviation" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Aviation
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li> -->
-        <!-- <li class="nav-item">
-            <a class="nav-link" href="shop">Shop</a>
-        </li> -->
       </ul>
-      <!-- <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
     </div>
+    <div class="group"></div>
   </nav>
 </div>
